# houdini-clipboard-io

./: .gitignore  LICENSE  README.md  pyproject.toml
clipboard-io/: __main__.py  node.py  node_clip.py  node_clipboard.py  parm.py  template.py  template_utils.py
cpio_library/: README.md
hclipboard_io/: __init__.py  node.py  node_clipboard.py  node_definition.py  parm.py  parm_definition.py  template.py  template_utils.py
implementations/: README.md  cli_example.py
